<resources>
    <string name="app_name">Lawyerly</string>
    <string name="tab_1">Tab 1</string>
    <string name="tab_2">Tab 2</string>
    <string name="tab_3">Tab 3</string>
    <string name="tab_4">Tab 4</string>
    <string name="tab_5">Tab 5</string>
    <string name="sort_by">Sort by</string>
    <string name="filters">Filters</string>
    <string name="background_verified">Background verified</string>
    <string name="hours">/h</string>
    <string name="lawyer_name_format">%1$s %2$s</string>
    <string name="hourly_rate_format">%1$.2f</string>
    <string name="rating_format">%1$.1f</string>
    <string name="upper_tab_1_title">FEATURED (5)</string>
    <string name="upper_tab_2_title">ALL (18)</string>
    <string name="upper_tab_3_title">FAVS (4)</string>
    <string name="lawyer_details">Lawyer details</string>
    <string name="description">Description</string>
    <string name="other_info">Other info</string>
</resources>